<resources>
    <string name="app_name">Study App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="google_api_key">AIzaSyDZY7HkkjWmJAcgCwWbj7Soa1zf56X8ZbA</string>
    <string name="facebook_app_id">293972325652615</string>
    <string name="fb_login_protocol_scheme">fb293972325652615</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_idea">Ứng dụng quản lý học tập cho sinh viên!</string>
    <string name="course">Khóa học</string>
    <string name="map">Bản đồ</string>
    <string name="news">Tin tức</string>
    <string name="social">Xã hội</string>
    <string name="semester">Kỳ học</string>
    <string name="class_course">Lớp</string>
    <string name="schedule">Thời khóa biểu</string>
    <string name="add_semester">Thêm kỳ học mới</string>
    <string name="semester_name">Tên kỳ học</string>
    <string name="start_date">Ngày bắt đầu</string>
    <string name="end_date">Ngày kết thúc</string>
    <string name="note">Ghi chú</string>
    <string name="add">Thêm</string>
    <string name="cancel">Hủy</string>
    <string name="edit">Sửa</string>
    <string name="delete">Xóa</string>
    <string name="confirm_delete">Xác nhận xóa</string>
    <string name="add_successfully">Thêm thành công!</string>
    <string name="add_failed">Thêm thất bại!</string>
    <string name="information_must_not_empty">Thông tin không được để trống!</string>
    <string name="delete_successfully">Xóa thành công!</string>
    <string name="delete_failed">Xóa thất bại!</string>
    <string name="edit_successfully">Sửa thành công!</string>
    <string name="edit_failed">Sửa  thất bại!</string>
    <string name="edit_semester">Sửa thông tin kỳ học</string>
    <string name="empty_list">Danh sách trống!</string>
    <string name="add_course">Thêm khóa học mới</string>
    <string name="edit_course">Chỉnh sửa khóa học</string>
    <string name="course_name">Tên khóa học</string>
    <string name="spinner_hint">Mẹo: Nếu danh sách chọn bị trống, chắc chắn rằng bạn đã thêm lựa chọn đó</string>
    <string name="delete_course">Xóa khóa học?</string>
    <string name="edit_class">Thêm lớp</string>
    <string name="delete_class">Xóa khóa học?</string>
    <string name="add_class">`Thêm lớp mới</string>
    <string name="enter_address">Nhập địa chỉ tìm kiếm</string>
</resources>