<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--val Id:Int, val semesterName:String, val className:String, val courseName:String,val fromHour:String, val toHour:String, val note:String    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:text="@string/semester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spinnerScheduleSemesterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/class_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spinnerScheduleClassName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/course"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spinnerScheduleCourseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtLayoutScheduleStartTime"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:endIconDrawable="@drawable/ic_baseline_calendar_today_24"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:editable="false"
                android:id="@+id/edtScheduleStartTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/start_date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtLayoutScheduleEndTime"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:endIconDrawable="@drawable/ic_baseline_calendar_today_24"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:editable="false"
                android:id="@+id/edtScheduleEndTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/end_date" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtScheduleNote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/note" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

</ScrollView>